server/public/css/stylesheet.css
@-ms-viewport {
  width: device-width;
}

/* Desktop/Large Screen Styles */

html {
  font-size: 10px;
  font-family: "Helvetica, sans-serif";

}
body {
  font-size: 100%;
  font-family: 'Raleway', sans-serif;
}

h1 {
  font-family: 'Arima Madurai', 'Times New Roman', serif;
  font-size: 3em;
  margin-top: 70px;
}

h2 {
  font-family: 'Arima Madurai', 'Times New Roman', serif;
  font-size: 2.6em;
  text-align: center;
  padding: 10px 0;
  color: #e6002e;
}

h3 {
  font-size: 2em;
  font-family: 'Arima Madurai', 'Times New Roman', serif;
  margin-left: 30px;
  padding: 10px 0;
  color: #e6002e;
}

h4 {
  margin-top: -70px;
  font-family: 'Raleway', sans-serif;
  font-size: 1em;
}

h5 {
  font-size: .7em;
}

p {
  font-size: 1.4em;
}

.intro {
  padding: 75px 50px 25px 70px;
}

.introcopy {
  margin: 5px 300px 25px 300px;
}

.introcopy2 {
  width: 65%;
}

.navbar-fixed-top, .navbar-fixed-bottom {
   /*position: relative;*/
  position: fixed;
  right: 0;
  left: 0;
  z-index: 1030;
}


.navbarcolor {
  background: linear-gradient(to right, #e6002e, #6625a7);
  width: auto;
}

.navbar-toggle {
  margin: 6% 6% 0 0;
}

.icon-bar {
  background-color: #ccc;
  align: left;
  margin-top: -20px;
}

li {
  list-style: none;
}

.mynav {
  font-size: 1.4em;
  padding-right: 25px;
}

.topspace {
  margin-top: 20px;
}

a {
    text-decoration: none;
    font-size: 1.2em;
    color: #FFF;
    list-style: none;
}

a:hover {
  text-decoration: none;
  font-size: 1.2em;
  color: #999999;
  list-style: none;
}

a:active {
  text-decoration: none;
  font-size: 1.2em;
  color: #aaddee;
  list-style: none;
}

a:focus {
  text-decoration: none;
  font-size: 1.2em;
  color: #429398;
  list-style: none;
}

.active {
   color: #aaddee;
   text-decoration: none;
   font-size: 1.2em;
   list-style: none;
}

.button {
  background-color: #6625a7;
  color: #FFF;
  margin: 20px 0 10px 0;
  padding-bottom: -5px;
  font-size: 1.2em;
}

.button:hover  {
  text-decoration: none;
  font-size: 1.2em;
  color: #999999;
  list-style: none;
  background-color: #ac00e6;
	cursor: pointer;
}

.adventure {
  font-family: 'Arima Madurai', "Times New Roman", serif;
  font-size: 2.5em;
  color: #FFF;
  letter-spacing: 15px;
  text-transform: uppercase;
  margin-top: 5px;
  padding-left: 6%;
}

.graysection {
  background: #f2f2f2;
  margin: 0 -30px;
  padding: 10px 70px 25px 70px;
}

.whitesection {
  padding: 10px 70px 25px 70px;
}

.whitesection h3 {
  margin: 0px;
}

.caption {
  font-size: 1.4em;
}

.captionhead {
  font-weight: bold;
  font-size: 1.7em;
  margin: 15px 0 5px 0;
}

.whitesection .captionhead {
  margin-left: -20px;
}

.center {
  text-align: center;
}

.leftspace {
  margin-left: 20px;
}

.rightspace {
  margin-right: 20px;
}

.bottomspace {
  margin-bottom: 40px;
}

.bottomspace2 {
  margin-bottom: 25px;
}

.vcenter {
  height: 430px;
  line-height: 400px;
}

.vcenter p {
  vertical-align: middle;
  display: inline-block;
}

.footer {
  background-color: #6625a7;
  color: #FFF;
  padding: 30px 30px 10px 50px;
  font-size: .8em;
}

.icon {
  margin-top: 30px;
  padding-right: 20px;
}

.imageicon {
  border: 3px solid #cccccc;
}


/* Modal on Design Page */
.designimageicon {
  border: 3px solid #cccccc;
  cursor: pointer;
  transition: all .2s ease-in-out;
}

.designimageicon:hover {
   transform: scale(1.1);
}

.app-modal-window .modal-dialog {
  width: 500px;
}

.modal-body {
  background-color: #e5e6e5;
}



/* Carousel on Photos and Art Page */

.carousel-indicators li {  /* hides dot style navigation buttons */
  visibility: hidden;
}

.carouselback {
  background-color: #000;
}

.carousel-control {  /* made space around arrows narrower */
  width: 50px;
}

.carousel {   /* made entire carousel narrower*/
  width: 650px;
  min-height: 475px;
  background-color: #000;
}

.carouselimage {  /* aligns image vertically with caption */
  max-height: 400px;
  margin: 15px auto 50px auto;
  padding-bottom: 40px;
}

.carousel-caption {   /* moves caption to underneath photo - default is on top of photo */
  margin: -25px -25px -50px -25px;
  padding: -250px 0 0 0;
  background-color: #000;
  font-family: 'Raleway', sans-serif;
}


/* TABLET / MEDIUM SCREEN STYLES ------------------------------------------------------------------------------------------- */

@media screen and (max-device-width: 768px) {

   h1 {
    font-size: 2.5em;
   }

   h2 {
     font-size: 2.2em;
   }

   h3 {
     font-size: 2em;
   }

   .navbar-toggle {
     margin: 6% 6% 0 0;
   }

   .icon-bar {
     margin-top: -30px;
   }

   .adventure {
     font-family: 'Arima Madurai', "Times New Roman", serif;
     font-size: 2.5em;
     color: #FFF;
     letter-spacing: 4px;
     text-transform: uppercase;
     margin: 5px 0 0 0;
     align: left;
     text-align: left;
   }

   .navbar-right {
        margin: -5% 0 0 15%;
        padding: 7% 0 3% 10%;
        background-color: #666;
        width: 55%;
    }

    .mynav {
      padding: 3% 0;
    }

} /* end TABLET styles

/* PHONE / SMALL SCREEN STYLES  -------------------------------------------------------------------------------------- */

@media screen and (max-device-width: 641px) {

    .navbar-right {
        margin: 0 0 0 0;
        padding: 5% 0 5% 3%;
    }

    .navbar-collapse {
        margin: auto 0;
        float: left;
        padding: -50px 0 0 2px;
        background-color: #666;
        width: 100vw;
    }

    .navbar-toggle {
      margin-top: 5px;
      padding-top: 10%;
    }

    .icon-bar {
      margin-top: -22px;
    }

    .adventure {
      margin-left: 0;
    }

    .mynav {
      padding: 10% 0;
      width: 200px;
    }


} /* end PHONE styles

